# Event-service

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 36375d8e8370_init.py  580737f06e95_init.py  84d7b77b4a83_init.py  a9e9dba7802c_init.py  e5a9df3c8292_pizda.py  ff0e2796c0d1_init.py
src/: app.py  settings.py
src/api/: routes.py
src/api/v1/: events.py
src/database/: file_storage.py  models.py  repositories.py  s3_storage.py  unit_of_work.py
src/schemas/: domains.py  schemas.py
src/service/: event.py  sport.py  sport_type.py
src/utils/: dependencies.py  mappers.py  repository.py  schemas.py  security.py  validations.py
tests/: models.py  sql.py
