[tool.poetry]
name = "src"
version = "0.0.0"
description = ""
authors = ["Beaver <beavernotacat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
SQLAlchemy = "^2.0.26"
pydantic-settings = "^2.1.0"
asyncpg = "^0.29.0"
httpx = "^0.26.0"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
boto3 = "^1.34.74"
fastapi-storages = "^0.3.0"
sqlalchemy-utils = "^0.41.2"
babel = "^2.14.0"

[tool.poetry.dev-dependencies]
pre-commit = "^3.6.2"
black = "^24.2.0"
isort = "^5.8.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
